--- a/groceryList_lite/templates/signUpForm.html
+++ b/groceryList_lite/templates/signUpForm.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %}
 
 {% block div2 %}
+{% if signUp.errors %}
+    {% for field in signUp %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in signUp.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
+
 <form action = "." method="post">
   {% csrf_token %}
 <h1>SignUp</h1>
